running busted code in place for new view positioning scheme

--- a/app/widgets/ArView/views/widget.xml
+++ b/app/widgets/ArView/views/widget.xml
@@ -1,7 +1,11 @@
 <Alloy>
 	<Window id="win">
 		
+		<View id="arContainer"/>
+		
 		<View id="overlay">
+			
+			<Button id="closeButton" platform="ios"/>
 
 			<View id="radarView"></View>
 			
