refactoring for Alloy and config module

--- a/app/views/listview.xml
+++ b/app/views/listview.xml
@@ -4,6 +4,10 @@
 
 	<Window id="win">
 		
+		<Label id="overlay"/>
+		<Button id="arViewButton" onClick="arViewButtonClick"/>
+
 	</Window>
+	
 	
 </Alloy>
