removed navigationgroup and now showing on android

--- a/app/views/listview.xml
+++ b/app/views/listview.xml
@@ -4,6 +4,8 @@
 
 	<Window id="win" title="List View">
 		
+		<Button onClick="clickClose">Close</Button>
+		
 		<TableView dataCollection="GooglePlace" onClick="tableClick">
 		
 			<TableViewRow hasDetail="true" modelId="{id}">
